Ensure modify_headers.sh is executable

--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -48,27 +48,32 @@ jobs:
       - name: Unzip LibTorch GPU
         run: unzip libtorch_gpu.zip -d libtorch_gpu
 
-      # Step 8: Run script to make required changes to LibTorch CPU headers
+      # Step 8: Set execute permissions for the modify_headers.sh script
+      - name: Set execute permissions for modify_headers.sh
+        run: chmod +x ./Setup/modify_headers.sh
+
+      # Step 10: Run script to make required changes to LibTorch CPU headers
       - name: Make changes to LibTorch CPU headers
         run: |
+          chmod +x Setup/modify_headers.sh
           LIBTORCH_ROOT_CPU=libtorch_cpu/libtorch
           ./Setup/modify_headers.sh $LIBTORCH_ROOT_CPU
 
-      # Step 9: Run script to make required changes to LibTorch GPU headers
+      # Step 11: Run script to make required changes to LibTorch GPU headers
       - name: Make changes to LibTorch GPU headers
         run: |
           LIBTORCH_ROOT_GPU=libtorch_gpu/libtorch
           ./Setup/modify_headers.sh $LIBTORCH_ROOT_GPU
 
-      # Step 10: Compress the unzipped CPU folder using RAR
+      # Step 12: Compress the unzipped CPU folder using RAR
       - name: Compress LibTorch CPU with RAR
         run: rar a -r libtorch_cpu.rar libtorch_cpu
 
-      # Step 11: Compress the unzipped GPU folder using RAR
+      # Step 13: Compress the unzipped GPU folder using RAR
       - name: Compress LibTorch GPU with RAR
         run: rar a -r libtorch_gpu.rar libtorch_gpu
 
-      # Step 12: Generate a GitHub App token
+      # Step 14: Generate a GitHub App token
       - name: Generate a token
         id: generate-token
         uses: actions/create-github-app-token@v1
@@ -76,7 +81,7 @@ jobs:
           app-id: ${{ vars.APP_ID }}
           private-key: ${{ secrets.APP_PRIVATE_KEY }}
 
-      # Step 13: Create a release and upload the RAR files as assets
+      # Step 15: Create a release and upload the RAR files as assets
       - name: Upload libtorch_cpu.rar and libtorch_gpu.rar to the release
         uses: softprops/action-gh-release@v2
         with:
